--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,7 +23,7 @@
         "@nestjs/common": "^11.0.1",
         "@nestjs/config": "^4.0.2",
         "@nestjs/core": "^11.0.1",
-        "@nestjs/platform-express": "^11.0.1",
+        "@nestjs/platform-express": "^11.1.9",
         "@nestjs/serve-static": "^5.0.3",
         "@nestjs/swagger": "^11.2.0",
         "@nestjs/throttler": "^6.4.0",
@@ -34,6 +34,7 @@
         "class-validator": "^0.14.2",
         "cookie-parser": "^1.4.7",
         "dayjs": "^1.11.13",
+        "glob": "^13.0.0",
         "jose": "^6.1.1",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
@@ -81,3 +82,4 @@
         "testEnvironment": "node"
     }
 }
+
